<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.study.runningsnail.snailapp.activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ADFF2F"
        android:gravity="center_horizontal"
        >
        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img1"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:src="@drawable/photos_disable"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignTop="@+id/imageView" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toRightOf="@id/img1"
                android:layout_centerVertical="true"
                android:src="@drawable/green"
                android:id="@+id/imageView" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toLeftOf="@id/img1"
                android:layout_centerVertical="true"
                android:src="@drawable/gules"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_above="@id/img1"
                android:layout_centerHorizontal="true"
                android:src="@drawable/orange"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@id/img1"
                android:layout_centerHorizontal="true"
                android:src="@drawable/oval"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:background="#ff4400"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >
            <TableRow>
                <Button
                    android:id="@+id/goHomeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_come_in" />

                <Button
                    android:id="@+id/goAnimalListBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_log_out" />

                <Button
                    android:id="@+id/logoutBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_log_out" />

            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register" />

                <Button
                    android:id="@+id/goServiceBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comeInServer" />

                <Button
                    android:id="@+id/goCameraBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_customer_camera" />

                <Button
                    android:id="@+id/goCustomViewBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_customView_text" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
